Optimize Search Path feature